force-app/main/default/objects/RevRecScheduleTemp__c/RevRecScheduleTemp__c.object-meta.xml
<CustomObject>
    <description>Template table to hold calculated values</description>
    <label>RevRecScheduleTemp</label>
    <nameField>
        <label>RevRecScheduleTemp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecSchedulesTemp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>