force-app/main/default/objects/RevRecScheduleTemp__c/fields/LineItemsTotal__c.field-meta.xml
<CustomField>
    <fullName>LineItemsTotal__c</fullName>
    <label>LineItemsTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>