force-app/main/default/objects/RevRecScheduleTemp__c/fields/MonthAndYear__c.field-meta.xml
<CustomField>
    <fullName>MonthAndYear__c</fullName>
    <label>MonthAndYear</label>
    <length>200</length>
    <type>Text</type>
</CustomField>