force-app/main/default/objects/RevRecScheduleTemp__c/fields/RecognizedRev__c.field-meta.xml
<CustomField>
    <fullName>RecognizedRev__c</fullName>
    <label>RecognizedRev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>