force-app/main/default/objects/RevRecScheduleTemp__c/fields/RecognizedRevTotal__c.field-meta.xml
<CustomField>
    <fullName>RecognizedRevTotal__c</fullName>
    <label>RecognizedRevTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>