force-app/main/default/objects/RevRecScheduleTemp__c/fields/ResidualAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>ResidualAmountTotal__c</fullName>
    <label>ResidualAmountTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>